--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "ext-curl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": ">5.7"
+    "phpunit/phpunit": "5.7.*|7.4.*"
   },
   "license": "MIT"
 }
