--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
   "require": {
     "php": ">=5.6.0",
     "ext-json": "*",
-    "byjg/anydataset": "4.1.*"
+    "byjg/anydataset": "dev-fix-depecrations-php81"
   },
   "suggest": {
     "ext-curl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.7.*|7.4.*"
+    "phpunit/phpunit": "5.7.*|7.4.*|^9.5"
   },
   "license": "MIT"
 }
