--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,15 @@
   "prefer-stable": true,
   "minimum-stability": "dev",
   "require": {
-    "php": ">=5.6.0",
+    "php": ">=7.4",
     "ext-json": "*",
-    "byjg/anydataset": "4.0.*"
+    "byjg/anydataset": "4.9.*"
   },
   "suggest": {
     "ext-curl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.7.*|7.4.*"
+    "phpunit/phpunit": "5.7.*|7.4.*|^9.6"
   },
   "license": "MIT"
 }
