--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,8 @@
   "require-dev": {
     "phpunit/phpunit": "5.7.*|7.4.*|^9.6"
   },
+  "provide": {
+    "byjg/anydataset-implementation": "1.0"
+  },
   "license": "MIT"
 }
