--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,16 @@
   "prefer-stable": true,
   "minimum-stability": "dev",
   "require": {
-    "php": ">=7.4",
+    "php": ">=8.1",
     "ext-json": "*",
-    "byjg/anydataset": "4.9.*"
+    "byjg/anydataset": "^5.0"
   },
   "suggest": {
     "ext-curl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.7.*|7.4.*|^9.6"
+    "phpunit/phpunit": "^9.6",
+    "vimeo/psalm": "^6.0"
   },
   "provide": {
     "byjg/anydataset-implementation": "1.0"
